--- a/.streamlit/secrets.toml
+++ b/.streamlit/secrets.toml
@@ -7,7 +7,7 @@ client_email= "streamlit-aml@aml-streamlit.iam.gserviceaccount.com"
 client_id= "109229852149038670934"
 auth_uri= "https://accounts.google.com/o/oauth2/auth"
 token_uri= "https://oauth2.googleapis.com/token"
-auth_provider_x509_cert_url": https://www.googleapis.com/oauth2/v1/certs"
+auth_provider_x509_cert_url= https://www.googleapis.com/oauth2/v1/certs"
 client_x509_cert_url = "https://www.googleapis.com/robot/v1/metadata/x509/streamlit-aml%40aml-streamlit.iam.gserviceaccount.com"
 universe_domain = "googleapis.com"
 
